bat.bool1.makes10.Makes10.scala.error
Erreur de compilation :
Makes10:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (a==10 || b==10 || (a+b)==10) {
  ^